--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   charts_flutter: ^0.12.0
   firebase_core: ^1.20.0
   firebase_analytics: ^9.3.0
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
