--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^1.20.0
   firebase_analytics: ^9.3.0
   provider: ^6.0.3
+  firebase_database: ^9.0.20
 
 dev_dependencies:
   flutter_test:
