--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_analytics: ^9.3.0
   provider: ^6.0.3
   firebase_database: ^9.0.20
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
